k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashimoto-pcos-service
  namespace: default
spec:
  selector:
    app: hashimoto-pcos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
